--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       I have deveoped 2 Plotly Reactive Apps that provide a global daily update of 
 	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus counter-measures</a> and
 	  country-level operational <a href="https://patternizer-covid19-forecast.herokuapp.com/" target="_blank">hindcast/forecast</a>.
-	  I am working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
+	  I am working with <a href="https://www.amycatanzano.com" target="_blank">Amy Catanzano</a> to develop an algorithm for
 	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>.</p>
 			
 <!--              Re-training in 
