--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <h3>Interests</h3>
         <ul class="ul-interests">
           
-          <li>EO metrology</li>          
+          <li>EO metrology & remote sensing</li>          
           <li>Climate data records</li>          
           <li>Machine learning</li>
           <li>Applied statistics</li>
@@ -378,16 +378,6 @@
 	  I am working with <a href="https://www.amycatanzano.com" target="_blank">Amy Catanzano</a> to develop an algorithm for
 	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>.</p>
 			
-<!--              Re-training in 
-              <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">Climate Change</a> science,
-              satellite data assimilation and WRF on a Raspberry Pi. 
-			  <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite reception with an RTL-SDR</a> and 
-              <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>.	  
-              Objective detection of image features with 
-              <a href="https://github.com/patternizer/birdpy" target="_blank">OpenCV2 </a>and YOLO and 
-              <a href="https://en.wikipedia.org/wiki/Long_short-term_memory" target="_blank">LTSM</a> timeseries forecasting. 
-              Deployment of Plotly Dash python <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">dashboards</a>.</p>
--->        	  			  
             </div>
           </div>
         </div>
@@ -776,9 +766,9 @@
             <div class="btn-group flex-wrap">
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
-                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">Dash</a>
+                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">COVID-19</a>
                 <a href="#" data-filter=".js-id-birdpy" class="btn btn-primary btn-lg">OpenCV2</a>
-                <a href="#" data-filter=".js-id-lstm" class="btn btn-primary btn-lg">LSTM</a>
+                <a href="#" data-filter=".js-id-worldlines" class="btn btn-primary btn-lg">Quantum Poetry</a>
                 <a href="#" data-filter=".js-id-ops_sat" class="btn btn-primary btn-lg">OPS-SAT</a>
                 <a href="#" data-filter=".js-id-plot_l1c" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-ocean_area" class="btn btn-primary btn-lg">ESA SST_CCI</a>
@@ -855,11 +845,28 @@
 <div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer-covid19.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Plotly Dash</a>
+    <a href="https://patternizer-covid19.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Global counter-measures update</a>
   </span>
-  <p class="project-summary">Coronavirus counter-measures: global status dashboard </p>
+  <p class="project-summary">Coronavirus counter-measures: global status daily dashboard </p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://patternizer-covid19-forecast.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Coronavirus operational hindcast/forecast</a>
+  </span>
+  <p class="project-summary">Coronavirus operational hindcast/forecast daily dashboard </p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-worldlines" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/quantum_poetry" target="_blank" rel="noopener" itemprop="url">Quantum Poetry</a>
+  </span>
+  <p class="project-summary"> Python implementation of World Lines quantum poetry algorithm in collaboration with 
+<a href="https://www.amycatanzano.com" target="_blank" rel="noopener" itemprop="url">Professor Amy Catanzano</a>
+ </p>
+</div>
 
 
     </div>
