--- a/index.html
+++ b/index.html
@@ -810,6 +810,14 @@
   <p class="project-summary">Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-ozone" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/ozone-updater" target="_blank" rel="noopener" itemprop="url">NDACC and WOUDC Ozone Updater</a>
+  </span>
+  <p class="project-summary">MATLAB code to download, read, parse and write operational data from NDACC and WOUDC.</p>
+</div>
+
 <div class="col-lg-12 project-item isotope-item js-id-birdpy" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
