--- a/index.html
+++ b/index.html
@@ -794,6 +794,14 @@
   <p class="project-summary">Multi-lognormal fitting of AERONET aerosol volume size distributions.</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-aeromap" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/AEROMAP_website" target="_blank" rel="noopener" itemprop="url">AEROMAP Project Website</a>
+  </span>
+  <p class="project-summary">FP7 Marie-Curie IEF AEROMAP project website.</p>
+</div>
+
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
