--- a/index.html
+++ b/index.html
@@ -797,9 +797,11 @@
 <div class="col-lg-12 project-item isotope-item js-id-aeromap" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/AEROMAP_website" target="_blank" rel="noopener" itemprop="url">AEROMAP Project Website</a>
+    <a href="https://github.com/patternizer/AEROMAP_website" target="_blank" rel="noopener" itemprop="url">AEROMAP Project Website (archive)</a>
   </span>
-  <p class="project-summary">FP7 Marie-Curie IEF AEROMAP project website.</p>
+  <p class="project-summary">Archived version of the project website for the FP7 Marie-Curie IEF project AEROMAP - 
+  Global mapping of aerosol properties using neural network inversions of ground and satellite based data (2012-2014): 
+  https://cordis.europa.eu/project/id/300515.</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
