--- a/index.html
+++ b/index.html
@@ -799,9 +799,10 @@
   <span class="project-title">
     <a href="https://github.com/patternizer/AEROMAP_website" target="_blank" rel="noopener" itemprop="url">AEROMAP Project Website (archive)</a>
   </span>
-  <p class="project-summary">Archived version of the project website for the FP7 Marie-Curie IEF project AEROMAP - 
-  Global mapping of aerosol properties using neural network inversions of ground and satellite based data (2012-2014): 
-  https://cordis.europa.eu/project/id/300515.</p>
+  <p class="project-summary">Archived version of the website for the FP7 Marie-Curie IEF project 'AEROMAP - 
+  Global mapping of aerosol properties using neural network inversions of ground and satellite based data' (2012-2014): 
+<a href="https://cordis.europa.eu/project/id/300515" target="_blank" rel="noopener" itemprop="url">https://cordis.europa.eu/project/id/300515</a> 
+</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
