--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/MMD_HARM" target="_blank" rel="noopener" itemprop="url">L1C harmonisation assessment</a>
+    <a href="https://github.com/patternizer/MMD_HARM" target="_blank" rel="noopener" itemprop="url">L1C FCDR harmonisation assessment</a>
   </span>
   <p class="project-summary">Code for comparison of FIDUCEO L1C harmonisation and CCI OE-based harmonisation using SST matchups.</p>
 </div>
