--- a/index.html
+++ b/index.html
@@ -829,6 +829,14 @@
   <p class="project-summary">Code for comparison of FIDUCEO L1C harmonisation and CCI OE-based harmonisation using SST matchups.</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/AVHRR_NOISE" target="_blank" rel="noopener" itemprop="url">L1B AVHRR noise characterisation</a>
+  </span>
+  <p class="project-summary">Noise characteristics of the thermal channels of the AVHRR.</p>
+</div>
+
 <div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
