Add link to github code repo for SST stats data descriptor work

--- a/index.html
+++ b/index.html
@@ -840,6 +840,18 @@
 <div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
+    <a href="https://github.com/patternizer/SST_CDR_STATS" target="_blank" rel="noopener" itemprop="url">ESA SST CCI stats</a>
+  </span>
+  <p class="project-summary">ESA SST CDR observation density and retrieval uncertainty calculation from the AVHRR and ATSR series of sensors.
+  <br>
+  Data descriptor: <a href="https://catalogue.ceda.ac.uk/uuid/dd63f6f7239f4c1da830950c6e58cfdd" target="_blank" rel="noopener" itemprop="url">https://catalogue.ceda.ac.uk/uuid/dd63f6f7239f4c1da830950c6e58cfdd</a>
+  Nature Scientific Data paper: <a href="https://www.nature.com/articles/s41597-019-0236-x" target="_blank" rel="noopener" itemprop="url">https://www.nature.com/articles/s41597-019-0236-x</a>
+  </p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
     <a href="https://github.com/patternizer/OCEAN_AREA" target="_blank" rel="noopener" itemprop="url">Ocean Area fraction</a>
   </span>
   <p class="project-summary">Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.</p>
