Add link to github code repo for SST stats data descriptor work

--- a/index.html
+++ b/index.html
@@ -842,12 +842,9 @@
   <span class="project-title">
     <a href="https://github.com/patternizer/SST_CDR_STATS" target="_blank" rel="noopener" itemprop="url">ESA SST CCI stats</a>
   </span>
-  <p class="project-summary">ESA SST CDR observation density and retrieval uncertainty calculation from the AVHRR and ATSR series of sensors.
-  <br>
-  <br>
-  Data descriptor: <a href="https://catalogue.ceda.ac.uk/uuid/dd63f6f7239f4c1da830950c6e58cfdd" target="_blank" rel="noopener" itemprop="url">https://catalogue.ceda.ac.uk/uuid/dd63f6f7239f4c1da830950c6e58cfdd</a>
-  <br>
-  Nature Scientific Data paper: <a href="https://www.nature.com/articles/s41597-019-0236-x" target="_blank" rel="noopener" itemprop="url">https://www.nature.com/articles/s41597-019-0236-x</a>
+  <p class="project-summary">ESA SST CDR observation density and retrieval uncertainty calculation from the AVHRR and ATSR series of sensors. 
+  <a href="https://catalogue.ceda.ac.uk/uuid/dd63f6f7239f4c1da830950c6e58cfdd" target="_blank" rel="noopener" itemprop="url">Data descriptor</a>. 
+  <a href="https://www.nature.com/articles/s41597-019-0236-x" target="_blank" rel="noopener" itemprop="url">Nature Sci Data paper.</a>
   </p>
 </div>
 
