Add link to github code repo for AVHRR FCDR ensemble data descriptor work

--- a/index.html
+++ b/index.html
@@ -818,7 +818,9 @@
   <span class="project-title">
     <a href="https://github.com/patternizer/FCDR_ST_ensemble" target="_blank" rel="noopener" itemprop="url">L1C FCDR ensemble generation</a>
   </span>
-  <p class="project-summary">Code to generate the FCDR ensemble used as input to surface temperature CDR.</p>
+  <p class="project-summary">Code to generate the FCDR ensemble used as input to surface temperature CDR.
+    <a href="https://catalogue.ceda.ac.uk/uuid/631e1f22d1754b78b5a64a3d66f4ce73" target="_blank" rel="noopener" itemprop="url">Data descriptor</a>. 
+  </p>
 </div> 
 
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
@@ -826,7 +828,7 @@
   <span class="project-title">
     <a href="https://github.com/patternizer/MMD_HARM" target="_blank" rel="noopener" itemprop="url">L1C FCDR harmonisation assessment</a>
   </span>
-  <p class="project-summary">Code for comparison of FIDUCEO L1C harmonisation and CCI OE-based harmonisation using SST matchups.</p>
+  <p class="project-summary">FIDUCEO L1C harmonisation comparison with CCI OE-based harmonisation using SST matchups.</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
