--- a/index.html
+++ b/index.html
@@ -816,9 +816,19 @@
 <div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/FCDR_ST_ensemble" target="_blank" rel="noopener" itemprop="url">L1C FCDR ensemble generation</a>
+    <a href="https://github.com/patternizer/FCDR_ST_ensemble" target="_blank" rel="noopener" itemprop="url">L1C AVHRR FCDR with traceable uncertainty generation</a>
   </span>
-  <p class="project-summary">Code to generate the FCDR ensemble used as input to surface temperature CDR.
+  <p class="project-summary">Code to generate the L1C AVHRR FCDR with metrologically-traceable uncertainty estimates.
+    <a href="https://catalogue.ceda.ac.uk/uuid/67b206b17365444b8243182f04c8ba44" target="_blank" rel="noopener" itemprop="url">Data descriptor</a>. 
+  </p>
+</div> 
+
+<div class="col-lg-12 project-item isotope-item js-id-fiduceo" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/FCDR_ST_ensemble" target="_blank" rel="noopener" itemprop="url">L1C AVHRR FCDR ensemble generation</a>
+  </span>
+  <p class="project-summary">Code to generate the L1C AVHRR FCDR ensemble used as input to surface temperature CDR.
     <a href="https://catalogue.ceda.ac.uk/uuid/631e1f22d1754b78b5a64a3d66f4ce73" target="_blank" rel="noopener" itemprop="url">Data descriptor</a>. 
   </p>
 </div> 
