Add link to Github code repo for re-harmonisation using OE work

--- a/index.html
+++ b/index.html
@@ -863,6 +863,14 @@
 <div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
+    <a href="https://github.com/patternizer/SST_OE" target="_blank" rel="noopener" itemprop="url">ESA SST CCI re-harmonisation using OE</a>
+  </span>
+  <p class="project-summary">Development code for optimal estimation (OE)-driven re-harmonisation of the measurement equations used for retrieval of SST from AVHRR IR channels.</p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
     <a href="https://github.com/patternizer/OCEAN_AREA" target="_blank" rel="noopener" itemprop="url">Ocean Area fraction</a>
   </span>
   <p class="project-summary">Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.</p>
