--- a/index.html
+++ b/index.html
@@ -863,6 +863,15 @@
 <div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
+    <a href="https://github.com/patternizer/SST_L3U-L4" target="_blank" rel="noopener" itemprop="url">ESA SST CCI L3U-L4 latitudinal validation</a>
+  </span>
+  <p class="project-summary">ESA SST CCI work forward modeled comparison between L3U and L4 SST variation with latitude. 
+  </p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-sst" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
     <a href="https://github.com/patternizer/SST_OE" target="_blank" rel="noopener" itemprop="url">ESA SST CCI re-harmonisation using OE</a>
   </span>
   <p class="project-summary">Development code for optimal estimation (OE)-driven re-harmonisation of the measurement equations used for retrieval of SST from AVHRR IR channels.</p>
