--- a/index.html
+++ b/index.html
@@ -893,6 +893,15 @@
   <p class="project-summary">MATLAB code to download, read, parse and write operational data from NDACC and WOUDC.</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-ozone" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/chimere-tools" target="_blank" rel="noopener" itemprop="url">CHIMERE Plotting tools</a>
+  </span>
+  <p class="project-summary">Plotting tools for post-processing the output of the chemical transport model CHIMERE.
+.</p>
+</div>
+
 <div class="col-lg-12 project-item isotope-item js-id-opencv2" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
