Commented out codersrank script

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	
    Mirrored to some extent also at my <a href="https://patternizer.org" target="_blank">weblog</a>. 
    
-<codersrank-widget username="patternizer"></codersrank-widget>
+<!-- <codersrank-widget username="patternizer"></codersrank-widget> !-->
    
 </p>
 
@@ -3855,7 +3855,7 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
   </div>
 </div>
 
-<script src="https://profile.codersrank.io/widget/widget.js"></script>
+<!-- <script src="https://profile.codersrank.io/widget/widget.js"></script> !-->
 
 </body>
 </html>
