--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 	  The app uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA. Recently I've been developing 
 	  2 Plotly Reactive Apps to visualise and provide the global daily update of 
 	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus counter-measures</a> and a MCMC estimated 
-	  country-level <a href="https://patternizer-covid19-forecast.herokuapp.com/" target="_blank">hindcast/forecast</a>.
+	  country-level <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank">hindcast/forecast</a>.
 	  I am working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
 	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>.
 	  </p>
@@ -367,7 +367,7 @@
 	  The app uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA. Recently I've been developing 
 	  2 Plotly Reactive Apps to visualise and provide the global daily update of 
 	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus counter-measures</a> and a MCMC estimated 
-	  country-level <a href="https://patternizer-covid19-forecast.herokuapp.com/" target="_blank">hindcast/forecast</a>.
+	  country-level <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank">hindcast/forecast</a>.
 	  I am working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
 	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>.	  
 	  </p>
@@ -933,15 +933,15 @@
   <span class="project-title">
     <a href="https://patternizer-covid19.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Global counter-measures update</a>
   </span>
-  <p class="project-summary">Coronavirus counter-measures: global status daily dashboard </p>
+  <p class="project-summary">Coronavirus global lockdown status daily dashboard </p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer-covid19-forecast.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Coronavirus operational hindcast/forecast</a>
+    <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank" rel="noopener" itemprop="url">Coronavirus operational hindcast/forecast</a>
   </span>
-  <p class="project-summary">Coronavirus operational hindcast/forecast daily dashboard </p>
+  <p class="project-summary">Coronavirus MCMC hindcast/forecast dashboard </p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-worldlines" itemscope itemtype="http://schema.org/CreativeWork">
