--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank" rel="noopener" itemprop="url">Coronavirus operational hindcast/forecast</a>
+    <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank" rel="noopener" itemprop="url">Coronavirus MCMC hindcast/forecast</a>
   </span>
   <p class="project-summary">Coronavirus MCMC hindcast/forecast dashboard </p>
 </div>
