Update bio and intro

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Senior Research Associate</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.uea.ac.uk/environmental-sciences" target="_blank" rel="noopener">School of Environmental Sciences</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.uea.ac.uk/environmental-sciences" target="_blank" rel="noopener">School of Environmental Sciences, UEA</a></h4>
             <div class="text-muted exp-meta">
 
               Aug 2020 – 
