--- a/index.html
+++ b/index.html
@@ -123,21 +123,14 @@
     </div>
     <div class="col-12 col-lg-8">
       <p><strong>CURRENT WORK</strong>: 
-      Re-training in 
-      <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">climate change</a> 
-	  science. I am working on a <a href="https://patternizer.org/weather-station" target="_blank">remote sensing station</a> that receives 
-      <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite data</a> 
-	  with an RTL-SDR dongle and a 
-      <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>.
-	  I am programming a Raspberry Pi3 to automate the downlink and serve the imagery via a web app I'm writing in Plotly Reactive Dash 
-	  running on Heroku to compare with simulations from NCAR’s Weather Research and Forcasting 
-	  (<a href="https://ral.ucar.edu/solutions/products/weather-research-and-forecasting-model-wrf" target="_blank">WRF</a>) model.
-	  The app uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA. Recently I've been developing 
-	  2 Plotly Reactive Apps to visualise and provide the global daily update of 
-	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus counter-measures</a> and a MCMC estimated 
-	  country-level <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank">hindcast/forecast</a>.
-	  I am working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
-	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>.
+	  
+	  I will shortly be starting work at 
+	  <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">UEA</a> on the 
+	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. I am working on digital 
+	  <a href="https://climate-spinner.herokuapp.com/" target="_blank">climate spinners</a> to help communicate the statistical impact of 
+	  climate change on weather and other atmospheric indicators. I am also working with 
+	  <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
+	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>. 
 	  </p>
 
 <p><strong>RECENT WORK</strong>:
@@ -401,23 +394,20 @@
             <div class="card-text">
 			
       Re-training in 
-      <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">climate change</a> 
-	  science. I am working on a <a href="https://patternizer.org/weather-station" target="_blank">remote sensing station</a> that receives 
-      <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite data</a> 
-	  with an RTL-SDR dongle and a 
-      <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a>.
-	  I am programming a Raspberry Pi3 to automate the downlink and serve the imagery via a web app I'm writing in Plotly Reactive Dash 
-	  running on Heroku to compare with simulations from NCAR’s Weather Research and Forcasting 
-	  (<a href="https://ral.ucar.edu/solutions/products/weather-research-and-forecasting-model-wrf" target="_blank">WRF</a>) model.
-	  The app uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA. Recently I've been developing 
-	  2 Plotly Reactive Apps to visualise and provide the global daily update of 
-	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus counter-measures</a> and a MCMC estimated 
+      <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">climate science</a>. 	 
+	  I built a <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a> to  
+	 receive <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite data</a> 
+	  with an RTL-SDR dongle and learned how to program a Raspberry Pi3 to automate the downlink and serve the imagery via a web app to set up 
+	  an amateur <a href="https://patternizer.org/weather-station" target="_blank">remote sensing station</a>. I also  installed 	  
+	  NCAR’s Weather Research and Forcasting (<a href="https://ral.ucar.edu/solutions/products/weather-research-and-forecasting-model-wrf" target="_blank">WRF</a>) model.
+	  The app uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA. To help during the pandemic 
+	  I wrote 2 Plotly python reactive apps to visualise and provide a global daily update of 
+	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus lockdown status</a> and to run a MCMC estimated 
 	  country-level <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank">hindcast/forecast</a>.
-	  I am working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
-	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>.	  
+	  I have been working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
+	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>. 
 	  </p>
-
-		
+	  
             </div>
           </div>
         </div>
