Update bio and intro

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <p><strong>CURRENT WORK</strong>: 
 	  
 	  I will shortly be starting work at 
-	  <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">UEA</a> on the 
+	  <a href="https://www.uea.ac.uk/environmental-sciences" target="_blank">UEA</a> on the 
 	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. I am working on digital 
 	  <a href="https://climate-spinner.herokuapp.com/" target="_blank">climate spinners</a> to help communicate the statistical impact of 
 	  climate change on weather and other atmospheric indicators. I am also working with 
