Update Bio and Experience

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             </div>
             <div class="card-text">
        
-      <a href="https://www.glosat.org/" target="_blank">GloSAT</a> porject. 
+      <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. 
 	  			
             </div>
           </div>
