--- a/index.html
+++ b/index.html
@@ -221,12 +221,13 @@
           </a>
         </li>
         
-#        <li>
-#          <a itemprop="sameAs" href="https://www.researchgate.net/profile/Michael_Taylor4" target="_blank" rel="noopener">
-#            <i class="ai ai-researchgate big-icon"></i>
-#          </a>
-#        </li>
-                
+<!--
+        <li>
+          <a itemprop="sameAs" href="https://www.researchgate.net/profile/Michael_Taylor4" target="_blank" rel="noopener">
+            <i class="ai ai-researchgate big-icon"></i>
+          </a>
+        </li>
+-->                
         <li>
           <a itemprop="sameAs" href="http://orcid.org/0000-0002-3473-3478" target="_blank" rel="noopener">
             <i class="ai ai-orcid big-icon"></i>
