--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <p><strong>CURRENT WORK</strong>: 
 	  
 	  I work at 
-	  <a href="https://www.uea.ac.uk/environmental-sciences" target="_blank">UEA CRU</a> on the 
+	  <a href="https://people.uea.ac.uk/en/organisations/climatic-research-unit(e78aef43-08b5-4854-928b-0b581a91d746).html" target="_blank">UEA CRU</a> on the 
 	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. 
 	  </p>
 
@@ -305,7 +305,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Senior Research Associate</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.uea.ac.uk/environmental-sciences" target="_blank" rel="noopener">Climatic Research Unit, School of Environmental Sciences, University of East Anglia</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="https://people.uea.ac.uk/en/organisations/climatic-research-unit(e78aef43-08b5-4854-928b-0b581a91d746).html" target="_blank" rel="noopener">Climatic Research Unit, School of Environmental Sciences, University of East Anglia</a></h4>
             <div class="text-muted exp-meta">
 
               Aug 2020 – 
@@ -363,12 +363,12 @@
 	  I built a <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a> to  
 	 receive <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite data</a> 
 	  with an RTL-SDR dongle and learned how to program a Raspberry Pi3 to automate the downlink and serve the imagery via a web app to set up 
-	  an amateur <a href="https://patternizer.org/weather-station" target="_blank">remote sensing station</a>. I also  installed 	  
+	  an amateur remote sensing station. I also  installed 
 	  NCAR’s Weather Research and Forcasting (<a href="https://ral.ucar.edu/solutions/products/weather-research-and-forecasting-model-wrf" target="_blank">WRF</a>) model.
 	  The app uses API to draw in hourly meteorological and hydrological data from UKMO and UKEA. To help during the pandemic 
 	  I wrote 2 Plotly python reactive apps to visualise and provide a global daily update of 
-	  <a href="https://patternizer-covid19.herokuapp.com/" target="_blank">Coronavirus lockdown status</a> and to run a MCMC estimated 
-	  country-level <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank">hindcast/forecast</a>.
+	  <a href="https://github.com/patternizer/Coronavirus_CounterMeasures" target="_blank">Coronavirus lockdown status</a> and to run a MCMC estimated 
+	  country-level <a href="https://github.com/patternizer/COVID-19-operational-forecast" target="_blank">hindcast/forecast</a>.
 	  I have been working with <a href="https://www.amycatanzano.com/" target="_blank">Amy Catanzano</a> to develop an algorithm for
 	  <a href="https://github.com/patternizer/quantum_poetry" target="_blank">quantum poetry</a>. 
 	  </p>
