Moved PDFs to pdf-archive and updated hyperlinks

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
       I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a 
-	  <a href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/mtaylor-phd-thesis-bw-scan.pdf" target="_blank">PhD</a>
+	  <a href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/mtaylor-phd-thesis-bw-scan.pdf" target="_blank">PhD</a>
 	   in Applied Mathematics in 1996 from the 
       Mathematics Institute of Saint Andrews University on <a href="https://aip.scitation.org/doi/abs/10.1063/1.871070" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
       I have 15 years postdoctoral research experience in the fields of Earth observation, remote sensing, astrophysics, applied statistics and scientific software engineering. 
@@ -998,7 +998,7 @@
     </div>
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/l1c_ensemble_fcdr.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/l1c_ensemble_fcdr.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -1045,7 +1045,7 @@
 
     <div class="btn-links">
       
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/l2p_sst_stats.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/l2p_sst_stats.pdf" target="_blank" rel="noopener">
         PDF
       </a>
   
@@ -1092,7 +1092,7 @@
 
     <div class="btn-links">
 
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/mtaylor_eqco_v0-5.pdf" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/mtaylor_eqco_v0-5.pdf" target="_blank" rel="noopener">
     PDF
   </a>
   
@@ -1143,7 +1143,7 @@
 
     <div class="btn-links">
 
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/mtaylor_loess_v0-1.pdf" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/mtaylor_loess_v0-1.pdf" target="_blank" rel="noopener">
     PDF
   </a>
 
@@ -1193,7 +1193,7 @@
 
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/mt_avhrr_fcdr_v5.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/mt_avhrr_fcdr_v5.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -1240,7 +1240,7 @@
     </div>
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/2016-kosmopoulos-et-al-conf-comecap-talk-estimation-of-the-solar-energy-potential-in-greece.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2016-kosmopoulos-et-al-conf-comecap-talk-estimation-of-the-solar-energy-potential-in-greece.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -1282,7 +1282,7 @@
     </div>
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/skynet_solea.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/skynet_solea.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -1329,7 +1329,7 @@
 
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/mtaylor_aeromap_v9.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/mtaylor_aeromap_v9.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -1385,7 +1385,7 @@
 
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/taylor-2014-multimodal-analysis-of-atypical-aerosol-events-v2.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/taylor-2014-multimodal-analysis-of-atypical-aerosol-events-v2.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -1438,7 +1438,7 @@
 
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/2009_isars_talk.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2009_isars_talk.pdf" target="_blank" rel="noopener">
         PDF
       </a>
     </div>
@@ -1486,7 +1486,7 @@
 
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/2007_estallidos5.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2007_estallidos5.pdf" target="_blank" rel="noopener">
         PDF
       </a>
     </div>
@@ -1532,7 +1532,7 @@
 
     <div class="btn-links">
 
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/2006_estallidos4.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2006_estallidos4.pdf" target="_blank" rel="noopener">
         PDF
       </a>
 
@@ -3596,7 +3596,7 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/patternizer/patternizer.github.io/blob/master/pdfs/2007_estallidos5.ppt" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2007_estallidos5.ppt" target="_blank" rel="noopener">
   Slides
 </a>
 
