Added updated link to SST CCI

--- a/index.html
+++ b/index.html
@@ -223,9 +223,8 @@
       Mathematics Institute of Saint Andrews University on <a href="https://aip.scitation.org/doi/abs/10.1063/1.871070" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
       I have 15 years postdoctoral research experience in the fields of Earth observation, remote sensing, astrophysics, applied statistics and scientific software engineering. 
       I am a member of the <a href="https://www.mariecuriealumni.eu/" target="_blank">Marie-Curie Alumni Association</a>. 
-      My last post was in the Department of Meteorology at the University of Reading generating and analysing climate data from EO  where I worked for the 
-      <a href="http://www.fiduceo.eu/" target="_blank">H2020 FIDUCEO</a>,
-      <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a>, and
+      My last post was in the Department of Meteorology at the University of Reading generating and analysing climate data from EO  where I worked for the H2020 FIDUCEO, 
+      <a href="https://climate.esa.int/en/projects/sea-surface-temperature/" target="_blank">ESA SST_CCI</a>, and
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.
       I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
 	   <a href="https://people.uea.ac.uk/en/organisations/climatic-research-unit(e78aef43-08b5-4854-928b-0b581a91d746).html" target="_blank">UEA CRU</a>.
@@ -407,9 +406,8 @@
                 <span>UK</span>
               
             </div>
-            <div class="card-text"><a href="http://www.fiduceo.eu" target="_blank">H2020 FIDUCEO</a>: 
-              Climate data from Earth observation. 
-              <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a>: 
+            <div class="card-text">H2020 FIDUCEO: Climate data from Earth observation. 
+              <a href="https://climate.esa.int/en/projects/sea-surface-temperature/" target="_blank">ESA SST_CCI</a>: 
               SST observation density analysis.
               <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a>: 
               Quality assurance of ECV products.
