--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
   <link rel="canonical" href="https://patternizer.github.io/">
-  <meta property="twitter:card" content="summary">
-  <meta property="twitter:site" content="@MichaelTaylorEO">
-  <meta property="twitter:creator" content="@MichaelTaylorEO">
+#  <meta property="twitter:card" content="summary">
+#  <meta property="twitter:site" content="@MichaelTaylorEO">
+#  <meta property="twitter:creator" content="@MichaelTaylorEO">
   <meta property="og:site_name" content="Patternizer">
   <meta property="og:url" content="https://patternizer.github.io/">
   <meta property="og:title" content="Patternizer">
@@ -176,12 +176,12 @@
           </a>
         </li>
         
-        <li>
+<!--        <li>
           <a itemprop="sameAs" href="https://twitter.com/MichaelTaylorEO" target="_blank" rel="noopener">
             <i class="fab fa-twitter big-icon"></i>
           </a>
         </li>
-        
+-->        
         <li>
           <a itemprop="sameAs" href="https://scholar.google.co.uk/citations?hl=en&amp;user=NvqMqs4AAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target="_blank" rel="noopener">
             <i class="ai ai-google-scholar big-icon"></i>
@@ -358,8 +358,7 @@
 			
       Re-training in 
       <a href="https://courses.edx.org/certificates/d5d1bcb00718424481bd5288ab9286a7" target="_blank">climate science</a>. 	 
-	  I built a <a href="https://twitter.com/MichaelTaylorEO/status/1247960062926163972" target="_blank">quadrifilar helix antenna</a> to  
-	 receive <a href="https://twitter.com/MichaelTaylorEO/status/1247968295422214152" target="_blank">APT weather satellite data</a> 
+	  I built a quadrifilar helix antenna to receive APT weather satellite data</a> 
 	  with an RTL-SDR dongle and learned how to program a Raspberry Pi3 to automate the downlink and serve the imagery via a web app to set up 
 	  an amateur remote sensing station. I also  installed 
 	  NCAR’s Weather Research and Forcasting (<a href="https://ral.ucar.edu/solutions/products/weather-research-and-forecasting-model-wrf" target="_blank">WRF</a>) model.
