Removed unsecure link to GEOCRADLE website

--- a/index.html
+++ b/index.html
@@ -481,7 +481,9 @@
                 <span>Greece</span>
               
             </div>
-            <div class="card-text"><a href="http://geocradle.eu/en" target="_blank">H2020 GEO-CRADLE</a> SENSE pilot (WP4): Use of neural networks to develop solar energy potential. MARIE-CURIE IEF <a href="https://cordis.europa.eu/project/rcn/102719/reporting/en" target="_blank">AEROMAP</a>: Global mapping of aerosol properties using neural network inversions of ground and satellite based data.</div>
+
+            <div class="card-text">H2020 GEO-CRADLE SENSE pilot (WP4): Use of neural networks to develop solar energy potential. MARIE-CURIE IEF <a href="https://cordis.europa.eu/project/rcn/102719/reporting/en" target="_blank">AEROMAP</a>: Global mapping of aerosol properties using neural network inversions of ground and satellite based data.</div>
+            
           </div>
         </div>
       </div>
