Removed unsecure link to LAP

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">PDRA</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://lap.physics.auth.gr/eumetsat/index.php" target="_blank" rel="noopener">Laboratory of Atmospheric Physics, Aristotle University of Thessaloniki</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"> <a href="" rel="noopener">Laboratory of Atmospheric Physics, Aristotle University of Thessaloniki</a></h4>
             <div class="text-muted exp-meta">
 
               Mar 2016 – Mar 2017
