Updated all links to secure https protocol

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
   <link rel="canonical" href="https://patternizer.github.io/">
-#  <meta property="twitter:card" content="summary">
-#  <meta property="twitter:site" content="@MichaelTaylorEO">
-#  <meta property="twitter:creator" content="@MichaelTaylorEO">
+<!--  <meta property="twitter:card" content="summary">
+  <meta property="twitter:site" content="@MichaelTaylorEO">
+  <meta property="twitter:creator" content="@MichaelTaylorEO">
+-->  
   <meta property="og:site_name" content="Patternizer">
   <meta property="og:url" content="https://patternizer.github.io/">
   <meta property="og:title" content="Patternizer">
@@ -437,7 +438,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">PDRA</h4>
-            <h4 class="card-title exp-company text-muted my-0">Laboratory of Atmospheric Physics, Aristotle University of Thessaloniki</h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="https://www.physics.auth.gr/en/research_labs/54" target="_blank" rel="noopener">Laboratory of Atmospheric Physics, Aristotle University of Thessaloniki</a></h4>
             <div class="text-muted exp-meta">
 
               Mar 2016 – Mar 2017
@@ -472,7 +473,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Fellow</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.noa.gr/index.php?lang=en" target="_blank" rel="noopener">National Observatory of Athens</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.noa.gr/index.php" target="_blank" rel="noopener">National Observatory of Athens</a></h4>
             <div class="text-muted exp-meta">
 
               Mar 2012 – Mar 2017
@@ -544,7 +545,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">PDRA</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.iem.csic.es/index_i.html" target="_blank" rel="noopener">Spanish National Research Council (CSIC)</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.iem.csic.es" target="_blank" rel="noopener">Spanish National Research Council (CSIC)</a></h4>
             <div class="text-muted exp-meta">
 
               Mar 2007 – Dec 2007
@@ -579,7 +580,9 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">PDRA</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://astro.ft.uam.es/" target="_blank" rel="noopener">Departamento de Fisica Teorica, Universidad Autonoma de Madrid (UAM)</a></h4>
+<!--            <h4 class="card-title exp-company text-muted my-0"><a href="http://astro.ft.uam.es/" target="_blank" rel="noopener">Departamento de Fisica Teorica, Universidad Autonoma de Madrid (UAM)</a></h4>
+-->
+            <h4 class="card-title exp-company text-muted my-0"><a href="https://www.uam.es/Ciencias/Departamento-de-F%C3%ADsica-Te%C3%B3rica/1242669601935.htm?language=es&nodepath=Departamento%20de%20F?sica%20Te?rica&pid=1242664085038" target="_blank" rel="noopener">Departamento de Fisica Teorica, Universidad Autonoma de Madrid (UAM)</a></h4>            
             <div class="text-muted exp-meta">
 
               Jan 2004 – Mar 2007
@@ -3416,12 +3419,12 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/2009-iop-nlevel-ion/" itemprop="url">Tutorial: exact solutions for the populations of the n-level ion</a>
+      <a href="/publication/2009-iop-nlevel-ion/" itemprop="url">Exact solutions for the populations of the n-level ion</a>
     </h3>
 
     
     <div class="article-style" itemprop="articleBody">
-      This tutorial presents a review of the analytical approach to obtain exact solutions for the populations of n-level ions, 
+      This paper presents a review of the analytical approach to obtain exact solutions for the populations of n-level ions, 
       and summarizes the ideas behind detailed balance and the statistical physics of collisionally-excited ions. We show that 
       the analytical method of solution to the problem using matrices and symbolic mathematics is straightforward, 
       and we illustrate through theoretical, numerical, and empirical checks the validity of its results. 
