--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-ops_sat" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://www.linkedin.com/pulse/remote-sensing-weather-satellites-qfh-michael-taylor?articleId=6654399994562392064#comments-6654399994562392064&trk=public_profile_article_view" target="_blank" rel="noopener" itemprop="url">OPS-SAT</a>
+    <a href="https://github.com/patternizer/villageApp" target="_blank" rel="noopener" itemprop="url">OPS-SAT</a>
   </span>
   <p class="project-summary">Remote sensing of weather satellites with a quadrifilar helix (QFH) antenna </p>
 </div>
@@ -933,7 +933,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer-covid19.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Global counter-measures update</a>
+    <a href="https://github.com/patternizer/Coronavirus_CounterMeasures" target="_blank" rel="noopener" itemprop="url">Global counter-measures update</a>
   </span>
   <p class="project-summary">Coronavirus global lockdown status daily dashboard </p>
 </div>
@@ -941,7 +941,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer.org/software-engineering/coronavirus-dashboard-operational-hindcast-forecast/" target="_blank" rel="noopener" itemprop="url">Coronavirus MCMC hindcast/forecast</a>
+    <a href="https://github.com/patternizer/COVID-19-operational-forecast" target="_blank" rel="noopener" itemprop="url">Coronavirus MCMC hindcast/forecast</a>
   </span>
   <p class="project-summary">Coronavirus MCMC hindcast/forecast dashboard </p>
 </div>
