Updated Netlify website

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <p><strong>CURRENT WORK</strong>: 
 	  
 	  I work at 
-	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">UEA CRU</a> on the 
+	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> on the 
 	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. 
 	  </p>
 
@@ -217,7 +217,7 @@
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
       I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a 
-	  <a href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/mtaylor-phd-thesis-bw-scan.pdf" target="_blank">PhD</a>
+	  <a href="https://ethos.bl.uk/OrderDetails.do?uin=uk.bl.ethos.750568" target="_blank">PhD</a>
 	   in Applied Mathematics in 1996 from the 
       Mathematics Institute of Saint Andrews University on <a href="https://aip.scitation.org/doi/abs/10.1063/1.871070" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
       I have 15 years postdoctoral research experience in the fields of Earth observation, remote sensing, astrophysics, applied statistics and scientific software engineering. 
@@ -226,7 +226,7 @@
       <a href="https://climate.esa.int/en/projects/sea-surface-temperature/" target="_blank">ESA SST_CCI</a>, and
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.
       I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
-	   <a href="https://people.uea.ac.uk/en/organisations/climatic-research-unit(e78aef43-08b5-4854-928b-0b581a91d746).html" target="_blank">UEA CRU</a>.
+	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a>.
 	  </p>
 	        
     <div class="row">
@@ -724,7 +724,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Associate</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.ccfe.ac.uk/JET.aspx" target="_blank" rel="noopener">Government Fusion Division, Culham Laboratory, Oxford</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="https://ccfe.ukaea.uk/research/joint-european-torus/" target="_blank" rel="noopener">Government Fusion Division, Culham Laboratory, Oxford</a></h4>
             <div class="text-muted exp-meta">
 
               Jan 1995 – Dec 1995
